# SnapSim3000

./: .gitignore  README.md  dodo.py  pyproject.toml  requirements-dev.txt
docs/: BRIEF.md
src/snapsim3000/: __main__.py
src/snapsim3000/deck/: __init__.py  _deck.py
src/snapsim3000/game/: __init__.py  _game.py
src/snapsim3000/player/: __init__.py  _player.py
tests/: test_game.py  test_player.py
