[tool.poetry]
name = "snapsim3000"
version = "0.1.0"
description = ""
authors = ["James Hudson <james.hudson@coalitioninc.com>"]
readme = "README.md"
packages = [{include = "snapsim3000", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
