[tool.poetry]
name = "snapsim3000"
version = "0.1.0"
description = ""
authors = ["James Hudson <james.hudson@outerbox.co.uk>"]
readme = "README.md"
packages = [{include = "snapsim3000", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
doit = "^0.36.0"
ruff = "^0.3.5"
mypy = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
